# sync-multicloud-service-rs

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: error.rs  main.rs  mongo.rs  web.rs
src/controller/: mod.rs
src/controller/data/: delete.rs  health.rs  mod.rs  set.rs
src/controller/proxy/: add.rs  delete.rs  get.rs  mod.rs
src/models/: error.rs  mod.rs  proxy.rs  success.rs
src/request/: mod.rs
src/request/data/: delete.rs  set.rs
src/request/proxy/: add.rs  delete.rs
src/service/: proxy.rs
