[package]
name = "sync-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.28"

# Backend
axum = { version = "0.6.18", features = ["json"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
rayon = "1.7.0"

# Testing
axum-test-helper = "0.2.0"

# Database
mongodb = "2.5.0"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"

# Validation
validator = { version = "0.16.0", features = ["derive"] }

# Swagger
utoipa = "3.3.0"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
